--- a/_quarto.yml
+++ b/_quarto.yml
@@ -9,6 +9,7 @@ website:
         - text: "Project Proposal"
           href: "Overview/Project_Proposal.html"
         - text: "Team"
+          href: "Overview/Team.html"
           
     
     - text: "Application"
