11 Mar huoda add ESDA commuting trips to shiny apps

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -14,8 +14,8 @@ website:
     
     - text: "Application"
       menu:
-      - text: "User Guide"
       - text: "Shiny Application"
+        href: "https://3vm3r5-da-huo.shinyapps.io/huoda-SGBusCommutingPattern/"
         
 
     
